# dj-sketch

./: .coverage  readme.md
audio_stream/: audio_stream.py
backend/: .gitignore  manage.py  pytest.ini  requirements.txt  setup.cfg  websocket.py
backend/audioapp/: admin.py  apps.py  filters.py  models.py  serializers.py  views.py
backend/audioapp/management/commands/: audio_stream.py
backend/audioapp/migrations/: 0001_initial.py  0002_alter_audiofile_file.py  0003_alter_audiofile_file.py  0004_alter_audiofile_options_audiofile_made_from_and_more.py  0005_playhistory.py
backend/audioapp/services/: audio_manipulator.py  process_audio.py
backend/audioapp/tests/: conftest.py  factories.py  test_audio_file_viewset.py  test_audio_manipulation_viewset.py  test_views.py
backend/audioapp/tests/test_services/: test_audio_manipulator.py
backend/djsketch/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
constants/: audioManipulationTypes.ts  serverSchemas.ts
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  types.ts
frontend/src/components/: AudioSettingsForm.tsx  BaseModal.tsx  DetailsTable.tsx  Logo.tsx  Manipulate.tsx  ServerButton.tsx
frontend/src/hooks/: useSynthEngine.ts
frontend/src/mocks/: m_uploads.json
frontend/src/pages/: AudioGenerator.tsx  AudioProcessor.jsx  AudioProcessor.tsx  AudioUploader.tsx  DisplayNodes.tsx  ListUploads.jsx  ListUploads.tsx  Microphone.tsx
frontend/src/stylees/: divider.css  graph.css  index.css
frontend/src/utils/: relativeDate.ts  uploadAudio.ts
(+7 files in other folders)
