[metadata]
name = backend
version = 0.1.0
description = A Django project to manage a sketching app
long_description = file: README.md
long_description_content_type = text/markdown
url = http://127.0.0.1:8000/
author = Guested
author_email = ehhhahah@gmail.com
license = MIT

[flake8]
max-line-length = 88
exclude = .git,__pycache__,env,.venv,.vscode,.idea,.mypy_cache,.pytest_cache,coverage_html_report

[isort]
profile = black
line_length = 88
known_first_party = backend
default_section = THIRDPARTY
forced_separate = django
skip_glob = .git,__pycache__,env,.venv,.vscode,.idea,.mypy_cache,.pytest_cache,coverage_html_report

[tool:pytest]
DJANGO_SETTINGS_MODULE = backend.settings
python_files = tests.py test_*.py *_tests.py
addopts = --cov=backend --cov-report=term-missing --cov-report=html

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[coverage:html]
directory = coverage_html_report
